--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     tools:context=".MainActivity">
 
     <EditText
-        app:layout_constraintVertical_weight="1"
         android:id="@+id/editTxt"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -15,24 +14,9 @@
         android:hint="@string/name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        app:layout_constraintVertical_weight="1"
-        android:id="@+id/searchButton"
-        android:layout_width="66dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="550dp"
-        app:icon="@drawable/ic_baseline_search_24"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toEndOf="@+id/editTxt"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="1" />
 
     <ListView
         android:id="@+id/listView"
@@ -40,11 +24,11 @@
         android:layout_height="510dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTxt"
-        app:layout_constraintVertical_bias="0.432"
-        app:layout_constraintVertical_weight="1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6"
+        android:focusableInTouchMode="false"
+        android:isScrollContainer="false"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
