--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:fontFamily="@font/poppins_bold"
         android:textSize="37sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
+        android:fontFamily="@font/poppins_light"
         android:layout_marginStart="7dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="start"
+        android:fontFamily="@font/poppins_light"
         android:layout_marginStart="7dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="start"
+        android:fontFamily="@font/poppins_light"
         android:layout_marginStart="7dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,6 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
+        android:fontFamily="@font/poppins_light"
         android:layout_marginStart="7dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
