--- a/app/src/main/res/layout/one_item.xml
+++ b/app/src/main/res/layout/one_item.xml
@@ -3,40 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="#23282b"
+        >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="27sp"
-            android:gravity="start"
-            android:layout_marginStart="5dp"
-            android:text="asdasd"
-            />
-        <TextView
-            android:id="@+id/race_and_status"
-            android:layout_marginTop="10dp"
-            android:text="efwef"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="21sp"
-            android:gravity="start"
-            android:layout_marginStart="5dp" />
+            <TextView
+                android:id="@+id/name"
+                android:fontFamily="@font/poppins_bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="27sp"
+                android:gravity="start"
+                android:layout_marginStart="5dp"
+                android:text="asdasd"
+                />
+            <TextView
+                android:id="@+id/race_and_status"
+                android:layout_marginTop="10dp"
+                android:text="efwef"
+                android:fontFamily="@font/poppins_light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="21sp"
+                android:gravity="start"
+                android:layout_marginStart="5dp" />
 
-        <TextView
-            android:id="@+id/male"
-            android:layout_marginTop="10dp"
-            android:text="efwef"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="21sp"
-            android:gravity="start"
-            android:layout_marginStart="5dp"/>
-
+            <TextView
+                android:id="@+id/male"
+                android:layout_marginTop="10dp"
+                android:text="efwef"
+                android:fontFamily="@font/poppins_light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="21sp"
+                android:gravity="start"
+                android:layout_marginStart="5dp"/>
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
